[tool.poetry]
name = "lamon"
version = "0.1.0"
description = "Monitor gameservers"
authors = ["Fabian Geiselhart <me@f4814n.de>"]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.0"
jinja2 = "^2.10"
sqlalchemy = "^1.2"
flask-sqlalchemy = "^2.3"
Flask-Migrate = "^2.3"
flask-user = "=0.6.21"
flask-admin = "^1.5"
flask-wtf = "^0.14.2"
psycopg2 = {version = "^2.8",optional = true}
python-valve = {version = "^0.2.1",optional = true}
toml = "^0.10.0"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
Flask-Testing = "^0.7.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
